<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="94dp"
            android:src="@drawable/card3d"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="325dp"
            android:fontFamily="@font/rubik"
            android:text="@string/activity_first_page_bonus_text_one"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="405dp"
            android:layout_marginEnd="71dp"
            android:fontFamily="@font/rubik"
            android:text="@string/activity_first_page_text_first"
            android:textColor="#787878"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="475dp"
            android:layout_marginEnd="71dp"
            android:fontFamily="@font/rubik"
            android:text="@string/activity_first_page_text_second"
            android:textColor="#787878"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="543dp"
            android:layout_marginEnd="71dp"
            android:fontFamily="@font/rubik"
            android:text="@string/activity_first_page_text_third"
            android:textColor="#787878"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <View
            android:id="@+id/view"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="403dp"
            android:background="@drawable/little_square"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="473dp"
            android:background="@drawable/little_square"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view3"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="543dp"
            android:background="@drawable/little_square"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/present"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="414dp"
            android:src="@drawable/vector1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/koleso"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="485dp"
            android:src="@drawable/vector2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/card"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="554dp"
            android:src="@drawable/vector3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/perviekvadrat"
            android:layout_width="312dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="625dp"
            android:background="@drawable/big_square"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vtoroikvadrat"
            android:layout_width="312dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="705dp"
            android:background="@drawable/big_square"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/tretiekvadrat"
            android:layout_width="312dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="785dp"
            android:background="@drawable/big_square"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints="username"
            android:fontFamily="@font/rubik"
            android:hint="@string/activity_first_page_name"
            android:textColor="#787878"
            android:textColorHint="#787878"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/perviekvadrat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/perviekvadrat"
            tools:ignore="HardcodedText,TextFields" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:autofillHints="creditCardNumber"
            android:fontFamily="@font/rubik"
            android:hint="@string/activity_first_page_iin"
            android:textColor="#787878"
            android:textColorHint="#787878"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/vtoroikvadrat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/vtoroikvadrat"
            tools:ignore="Autofill,HardcodedText,TextFields" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/rubik"
            android:hint="@string/activity_first_page_phone_number"
            android:textColor="#787878"
            android:textColorHint="#787878"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tretiekvadrat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/tretiekvadrat"
            tools:ignore="Autofill,HardcodedText,TextFields" />

        <CheckBox
            android:id="@+id/editBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="877dp"
            android:checked="false"
            android:fontFamily="@font/rubik"
            android:text="@string/activity_first_page_checkbox_text"
            android:textColor="#333333"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/myTextView"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="929dp"
            android:autoLink="web"
            android:fontFamily="@font/rubik"
            android:linksClickable="true"
            android:text="@string/partial_text"
            android:textColorLink="#9e0606"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="317dp"
            android:layout_height="57dp"
            android:layout_marginTop="1021dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/activity_first_page_delivery_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="312dp"
            android:layout_height="56dp"
            android:layout_marginTop="1102dp"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:text="@string/activity_first_page_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="1158dp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

